--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<h1>I am a Business Accomplice & Virtual Assistant!</h1>
+<h1>Hello World!</h1>
+<p>I am your Business Sidekick and Virtual Assistant</p>
