--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>Hello World!</h1>
-<p>I am your Business Sidekick and Virtual Assistant</p>
+<p>Norlyn here, your Business Sidekick and Virtual Assistant</p>
