--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	</ul>
 	<div class="carousel-inner">
 		<div class="carousel-item active">
-			<img src="![background](https://user-images.githubusercontent.com/52349385/63213957-2938c000-c145-11e9-8b29-1d7079fc8cdf.png)">
+			<img src="img/background.png">
 			<div class="carousel-caption">
 				<h1 class="display-2">Remote Assistance</h1>
 				<h3 class="display-4">Your "Go-To" Online Support</h3>
