--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	</ul>
 	<div class="carousel-inner">
 		<div class="carousel-item active">
-			<img src="img/background.png">
+			<img src="background.png">
 			<div class="carousel-caption">
 				<h1 class="display-2">Remote Assistance</h1>
 				<h3 class="display-4">Your "Go-To" Online Support</h3>
@@ -55,10 +55,10 @@
 			</div>
 		</div>
 		<div class="carousel-item">
-			<img src="img/background3.png">
+			<img src="background3.png">
 		</div>
 		<div class="carousel-item">
-			<img src="img/background2.png">
+			<img src="background2.png">
 		</div>
 	</div>
 </div>
@@ -138,7 +138,7 @@
 			<a href="#" class="btn btn-primary">Learn more</a>
 		</div>
 		<div class="col-lg-6">
-			<img src="img/desk.png" class="img-fluid">
+			<img src="desk.png" class="img-fluid">
 		</div>
 	</div>
 </div>
@@ -160,16 +160,16 @@
 	 <div class="container-fluid padding">
 		 <div class="row text-center">
 			 <div class="col-sm-6 col-md-3">
-				 <img class="gif" src="img/gif/panda.gif">
+				 <img class="gif" src="panda.gif">
 			 </div>
 			 <div class="col-sm-6 col-md-3">
-				<img class="gif" src="img/gif/poo.gif">
+				<img class="gif" src="poo.gif">
 			</div>
 			<div class="col-sm-6 col-md-3">
-				<img class="gif" src="img/gif/unicorn.gif">
+				<img class="gif" src="unicorn.gif">
 			</div>
 			<div class="col-sm-6 col-md-3">
-				<img class="gif" src="img/gif/chicken.gif">
+				<img class="gif" src="chicken.gif">
 			</div>
 		 </div>
 	 </div>
@@ -189,7 +189,7 @@
 	<div class="row padding">
 		<div class="col-md-6">
 			<div class="card">
-				<img class="card-img-top" src="img/myphoto3.png">
+				<img class="card-img-top" src="myphoto3.png">
 				<div class="card-body">
 					<h4 class="card-title">Norlyn as a VA</h4>
 					<p class="card-text">Norlyn has been offering online support as a Virtual Assistant for more than a year.</p>
@@ -199,7 +199,7 @@
 		</div>
 		<div class="col-md-6">
 			<div class="card">
-				<img class="card-img-top" src="img/myphoto2.png">
+				<img class="card-img-top" src="myphoto2.png">
 				<div class="card-body">
 					<h4 class="card-title">Norlyn as a Web Developer</h4>
 					<p class="card-text">Discovered her love in creating website and other coding related projects.</p>
@@ -221,7 +221,7 @@
 			<br>
 		</div>
 		<div class="col-lg-6">
-			<img src="img/bootstrap2.png" class="img-fluid">
+			<img src="bootstrap2.png" class="img-fluid">
 		</div>
 	</div>
 	<hr class="my-4">
