--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	</ul>
 	<div class="carousel-inner">
 		<div class="carousel-item active">
-			<img src="img/background.png">
+			<img src="background.png">
 			<div class="carousel-caption">
 				<h1 class="display-2">Remote Assistance</h1>
 				<h3 class="display-4">Your "Go-To" Online Support</h3>
