--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			<a href="#" class="btn btn-primary">Learn more</a>
 		</div>
 		<div class="col-lg-6">
-			<img src="img/desk.png" class="img-fluid">
+			<img src="desk.png" class="img-fluid">
 		</div>
 	</div>
 </div>
