--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 			</div>
 		</div>
 		<div class="carousel-item">
-			<img src="img/background3.png">
+			<img src="background3.png">
 		</div>
 		<div class="carousel-item">
-			<img src="img/background2.png">
+			<img src="background2.png">
 		</div>
 	</div>
 </div>
@@ -153,23 +153,21 @@
 </figure>
 
 <!--- Emoji Section -->
-<button class="fun" data-toggle="collapse" data-target="#emoji">click for fun
-
-</button>
+<button class="fun" data-toggle="collapse" data-target="#emoji">click for fun</button>
  <div id="emoji" class="collapse">
 	 <div class="container-fluid padding">
 		 <div class="row text-center">
 			 <div class="col-sm-6 col-md-3">
-				 <img class="gif" src="img/gif/panda.gif">
+				 <img class="gif" src="panda.gif">
 			 </div>
 			 <div class="col-sm-6 col-md-3">
-				<img class="gif" src="img/gif/poo.gif">
+				<img class="gif" src="poo.gif">
 			</div>
 			<div class="col-sm-6 col-md-3">
-				<img class="gif" src="img/gif/unicorn.gif">
+				<img class="gif" src="unicorn.gif">
 			</div>
 			<div class="col-sm-6 col-md-3">
-				<img class="gif" src="img/gif/chicken.gif">
+				<img class="gif" src="chicken.gif">
 			</div>
 		 </div>
 	 </div>
@@ -189,7 +187,7 @@
 	<div class="row padding">
 		<div class="col-md-6">
 			<div class="card">
-				<img class="card-img-top" src="img/myphoto3.png">
+				<img class="card-img-top" src="myphoto3.png">
 				<div class="card-body">
 					<h4 class="card-title">Norlyn as a VA</h4>
 					<p class="card-text">Norlyn has been offering online support as a Virtual Assistant for more than a year.</p>
@@ -199,7 +197,7 @@
 		</div>
 		<div class="col-md-6">
 			<div class="card">
-				<img class="card-img-top" src="img/myphoto2.png">
+				<img class="card-img-top" src="myphoto2.png">
 				<div class="card-body">
 					<h4 class="card-title">Norlyn as a Web Developer</h4>
 					<p class="card-text">Discovered her love in creating website and other coding related projects.</p>
@@ -221,7 +219,7 @@
 			<br>
 		</div>
 		<div class="col-lg-6">
-			<img src="img/bootstrap2.png" class="img-fluid">
+			<img src="bootstrap2.png" class="img-fluid">
 		</div>
 	</div>
 	<hr class="my-4">
@@ -281,8 +279,6 @@
 		</div>
 	</div>
 </footer>
-
-
 
 </body>
 </html>
