--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 	<link href="style.css" rel="stylesheet">
 </head>
-<body>
+<body id="index">
 
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#">NORLYNPIQUERO.github.io</a>
+		<a class="navbar-brand" href="index.html">NorlynPiquero</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
 		data-target="#navbarResponsive">
 		<span class="navbar-toggler-icon"></span>
 		</button> 
 		<div class="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
-				<li class="navbar-item active">
+				<li class="navbar-item">
 					<a class="nav-link" href="index.html">Home</a>
 				</li>
 				<li class="navbar-item">
@@ -46,19 +46,19 @@
 	</ul>
 	<div class="carousel-inner">
 		<div class="carousel-item active">
-			<img src="background.png">
+			<img src="img/background.png">
 			<div class="carousel-caption">
 				<h1 class="display-2">Remote Assistance</h1>
 				<h3 class="display-4">Your "Go-To" Online Support</h3>
-				<button type="button" class="btn btn-outline-light btn-lg">VIEW SAMPLES</button>
-				<button type="button" class="btn btn-primary btn-lg">Get Started</button>
+				<a href="services.html"><button type="button" class="btn btn-outline-light btn-lg">VIEW SAMPLES</button></a>
+				<a href="connect.html"><button type="button" class="btn btn-primary btn-lg">Get Started</button></a>
 			</div>
 		</div>
 		<div class="carousel-item">
-			<img src="background3.png">
+			<img src="img/background3.png">
 		</div>
 		<div class="carousel-item">
-			<img src="background2.png">
+			<img src="img/background2.png">
 		</div>
 	</div>
 </div>
@@ -70,7 +70,7 @@
 			<p class="lead">I bring trust and care to small business owners, startup entrepreneurs by providing them the digital support they need to further their business online.</p>
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
-			<a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">Services</button></a>
+			<a href="services.html"><button type="button" class="btn btn-outline-secondary btn-lg">Services</button></a>
 		</div>
 	</div>
 </div>
@@ -135,10 +135,10 @@
 			<p>I bring trust and care to small business owners, startup entrepreneurs by providing them the digital support they need to further their business online.</p>
 			<p>From Website Development & Management, Social Media Management, Creating a Landing Page to Administrative tasks. I am your 'go-to' virtual support, ready to assist you with your online needs.</p>
 			<br>
-			<a href="#" class="btn btn-primary">Learn more</a>
+			<a href="services.html" class="btn btn-primary">Learn more</a>
 		</div>
 		<div class="col-lg-6">
-			<img src="desk.png" class="img-fluid">
+			<img src="img/desk.png" class="img-fluid">
 		</div>
 	</div>
 </div>
@@ -153,21 +153,23 @@
 </figure>
 
 <!--- Emoji Section -->
-<button class="fun" data-toggle="collapse" data-target="#emoji">click for fun</button>
+<button class="fun" data-toggle="collapse" data-target="#emoji">click for fun
+
+</button>
  <div id="emoji" class="collapse">
 	 <div class="container-fluid padding">
 		 <div class="row text-center">
 			 <div class="col-sm-6 col-md-3">
-				 <img class="gif" src="panda.gif">
+				 <img class="gif" src="img/gif/panda.gif">
 			 </div>
 			 <div class="col-sm-6 col-md-3">
-				<img class="gif" src="poo.gif">
+				<img class="gif" src="img/gif/poo.gif">
 			</div>
 			<div class="col-sm-6 col-md-3">
-				<img class="gif" src="unicorn.gif">
+				<img class="gif" src="img/gif/unicorn.gif">
 			</div>
 			<div class="col-sm-6 col-md-3">
-				<img class="gif" src="chicken.gif">
+				<img class="gif" src="img/gif/chicken.gif">
 			</div>
 		 </div>
 	 </div>
@@ -185,23 +187,25 @@
 <!--- Cards -->
 <div class="container-fluid padding">
 	<div class="row padding">
+		
 		<div class="col-md-6">
 			<div class="card">
-				<img class="card-img-top" src="myphoto3.png">
+				<img class="card-img-top" src="img/myphoto3.png">
 				<div class="card-body">
 					<h4 class="card-title">Norlyn as a VA</h4>
 					<p class="card-text">Norlyn has been offering online support as a Virtual Assistant for more than a year.</p>
-					<a href="#" class="btn btn-outline-secondary">See Profile</a>
+					<a href="services.html" class="btn btn-outline-secondary">See Profile</a>
 				</div>
 			</div>
 		</div>
+
 		<div class="col-md-6">
 			<div class="card">
-				<img class="card-img-top" src="myphoto2.png">
+				<img class="card-img-top" src="img/myphoto2.png">
 				<div class="card-body">
 					<h4 class="card-title">Norlyn as a Web Developer</h4>
 					<p class="card-text">Discovered her love in creating website and other coding related projects.</p>
-					<a href="#" class="btn btn-outline-secondary">See Profile</a>
+					<a href="services.html" class="btn btn-outline-secondary">See Profile</a>
 				</div>
 			</div>
 		</div>
@@ -219,7 +223,7 @@
 			<br>
 		</div>
 		<div class="col-lg-6">
-			<img src="bootstrap2.png" class="img-fluid">
+			<img src="img/bootstrap2.png" class="img-fluid">
 		</div>
 	</div>
 	<hr class="my-4">
@@ -233,11 +237,11 @@
 			<h2>Connect</h2>
 		</div>
 		<div class="col-12 social padding">
-			<a href="#"><i class="fab fa-facebook"></i></a>
-			<a href="#"><i class="fab fa-twitter"></i></a>
-			<a href="#"><i class="fab fa-youtube"></i></a>
-			<a href="#"><i class="fab fa-instagram"></i></a>
-			<a href="#"><i class="fab fa-linkedin"></i></a>
+			<a href="https://www.facebook.com/norlynpiquero" target="_blank"><i class="fab fa-facebook"></i></a>
+			<a href="https://twitter.com/NorlynPiquero" target="_blank"><i class="fab fa-twitter"></i></a>
+			<a href="https://www.youtube.com/channel/UCfUBHWVV95jJ4nOfmGl9hWQ" target="_blank"><i class="fab fa-youtube"></i></a>
+			<a href="https://www.instagram.com/norlynpiquero/" target="_blank"><i class="fab fa-instagram"></i></a>
+			<a href="https://www.linkedin.com/in/norlynpiquero/" target="_blank"><i class="fab fa-linkedin"></i></a>
 		</div>
 	</div>
 </div>
@@ -266,10 +270,13 @@
 				<h5>Services Offered</h5>
 				<hr class="light">
 				<div>
-					<a href="#">Website Development</a>
+					<a href="3rdservice.html">Frontend Development</a>
 				</div>
 				<div>
-					<a href="#">Virtual Assistance</a>
+					<a href="wordpress.html">WordPress Development</a>
+				</div>
+				<div>
+					<a href="vaservices.html">Virtual Assistance</a>
 				</div>
 			</div>
 			<div class="col-12">
@@ -279,6 +286,8 @@
 		</div>
 	</div>
 </footer>
+
+
 
 </body>
 </html>
