--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
 
 <!-- Image Banner -->
 <div class="banner">
-    <img class="banner-image" src="img/services.png">
+    <img class="banner-image" src="services.png">
 </div>
 
 <!-- Services -->
