--- a/connect.html
+++ b/connect.html
@@ -39,7 +39,7 @@
 
 <!-- banner -->
 <div id="contact" class="banner">
-    <img class="banner-image" src="img/contact.jpg">
+    <img class="banner-image" src="contact.jpg">
 </div>
 
 <!-- contact -->
