--- a/wordpress.html
+++ b/wordpress.html
@@ -42,77 +42,77 @@
 <div id="wpcontainer">
     <div id="wordpress" class="container">
         <h3 id="trapar">Transportation Booking Site</h3>
-        <a href="https://trapar.co.uk/"><img src="img/TraPar.png"></a>
+        <a href="https://trapar.co.uk/"><img src="TraPar.png"></a>
     </div> 
 </div>
 
 <div id="landingpage1">
     <div id="wordpress" class="container">
         <h3 id="trapar">Landing Page 1</h3>
-        <a href="https://trapar.co.uk/coach-hire-edinburgh/"><img src="img/LP1.png"></a>
+        <a href="https://trapar.co.uk/coach-hire-edinburgh/"><img src="LP1.png"></a>
     </div> 
 </div>
 
 <div id="landingpage2">
     <div id="wordpress" class="container">
         <h3 id="trapar">Landing Page 2</h3>
-        <a href="https://trapar.co.uk/coach-hire-london/"><img src="img/LP2.png"></a>
+        <a href="https://trapar.co.uk/coach-hire-london/"><img src="LP2.png"></a>
     </div> 
 </div>
 
 <div id="landingpage3">
     <div id="wordpress" class="container">
         <h3 id="trapar">Landing Page 3</h3>
-        <a href="https://trapar.co.uk/coach-hire-liverpool/"><img src="img/LP3.png"></a>
+        <a href="https://trapar.co.uk/coach-hire-liverpool/"><img src="LP3.png"></a>
     </div> 
 </div>
 
 <div id="landingpage4">
     <div id="wordpress" class="container">
         <h3 id="trapar">Landing Page 4</h3>
-        <a href="https://trapar.co.uk/coach-hire-glasgow/"><img src="img/LP4.png"></a>
+        <a href="https://trapar.co.uk/coach-hire-glasgow/"><img src="LP4.png"></a>
     </div> 
 </div>
 
 <div id="landingpage5">
     <div id="wordpress" class="container">
         <h3 id="trapar">Landing Page 5</h3>
-        <a href="https://trapar.co.uk/coach-hire-manchester/"><img src="img/LP5.png"></a>
+        <a href="https://trapar.co.uk/coach-hire-manchester/"><img src="LP5.png"></a>
     </div> 
 </div>
 
 <div id="landingpage6">
     <div id="wordpress" class="container">
         <h3 id="trapar">Landing Page 6</h3>
-        <a href="https://trapar.co.uk/coach-hire-birmingham/"><img src="img/LP6.png"></a>
+        <a href="https://trapar.co.uk/coach-hire-birmingham/"><img src="LP6.png"></a>
     </div> 
 </div>
 
 <div id="landingpage7">
     <div id="wordpress" class="container">
         <h3 id="trapar">Landing Page 7</h3>
-        <a href="https://trapar.co.uk/coach-hire-leeds/"><img src="img/LP7.png"></a>
+        <a href="https://trapar.co.uk/coach-hire-leeds/"><img src="LP7.png"></a>
     </div> 
 </div>
 
 <div id="landingpage8">
     <div id="wordpress" class="container">
         <h3 id="trapar">Landing Page 8</h3>
-        <a href="https://trapar.co.uk/coach-hire-essex/"><img src="img/LP8.png"></a>
+        <a href="https://trapar.co.uk/coach-hire-essex/"><img src="LP8.png"></a>
     </div> 
 </div>
 
 <div id="landingpage9">
     <div id="wordpress" class="container">
         <h3 id="trapar">Landing Page 9</h3>
-        <a href="https://trapar.co.uk/coach-hire-nottingham/"><img src="img/LP9.png"></a>
+        <a href="https://trapar.co.uk/coach-hire-nottingham/"><img src="LP9.png"></a>
     </div> 
 </div>
 
 <div id="landingpage10">
     <div id="wordpress" class="container">
         <h3 id="trapar">Landing Page 10</h3>
-        <a href="https://trapar.co.uk/coach-hire-kent/"><img src="img/LP10.png"></a>
+        <a href="https://trapar.co.uk/coach-hire-kent/"><img src="LP10.png"></a>
     </div> 
 </div>
 <!--- Footer -->
