--- a/vaservices.html
+++ b/vaservices.html
@@ -47,7 +47,7 @@
                     <div class="icon">01</div>
                         <div class="content">
                             <h3 class="card-title">Data Management</h3>
-                            <img class="card-img-top" src="img/one.png">
+                            <img class="card-img-top" src="one.png">
                         </div>
                 </div>	
             </div>
@@ -59,7 +59,7 @@
                     <div class="icon">02</div>
                         <div class="content">
                             <h3 class="card-title">Email Management</h3>
-                            <img class="card-img-top" src="img/two.png">
+                            <img class="card-img-top" src="two.png">
                         </div>
                 </div>	
             </div>
@@ -71,7 +71,7 @@
                     <div class="icon">03</div>
                         <div class="content">
                             <h3 class="card-title">Basic Graphic Design</h3>
-                            <img class="card-img-top" src="img/three.png">
+                            <img class="card-img-top" src="three.png">
                         </div>
                 </div>	
             </div>
@@ -84,7 +84,7 @@
                         <div class="icon">04</div>
                             <div class="content">
                                 <h3 class="card-title">Social Media Management</h3>
-                                <img class="card-img-top" src="img/four.png">
+                                <img class="card-img-top" src="four.png">
                             </div>
                     </div>	
                 </div>
@@ -96,7 +96,7 @@
                     <div class="icon">05</div>
                         <div class="content">
                             <h3 class="card-title">Basic Graphic Design</h3>
-                            <img class="card-img-top" src="img/five.png">
+                            <img class="card-img-top" src="five.png">
                         </div>
                 </div>	
             </div>
